added main view for node graph editor using d3. Able to connect nodes by dragging

--- a/ironcat/templates/global.html
+++ b/ironcat/templates/global.html
@@ -10,7 +10,7 @@
     <script src="/static/scripts/start.js"></script>
     <link rel="stylesheet" href="/static/lib/bootstrap/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/static/lib/bootstrap/css/bootstrap-custom.min.css"/>
-    {% block scripts %}{% endblock %}
+    {% block include %}{% endblock %}
 </head>
 <body>
     <nav class="navbar navbar-default">
@@ -21,7 +21,7 @@
             <div>
                 <ul class="nav navbar-nav">
                     <li><a href="/">Home</a></li>
-                    <li><a href="/">Contribute</a></li>
+                    <li><a href="contribute/">Contribute</a></li>
                     <li><a href="/">Search</a></li>
                     <li><a href="/">Profile</a></li>
                 </ul>
