--- a/ironcat/templates/global.html
+++ b/ironcat/templates/global.html
@@ -10,6 +10,7 @@
     <script src="/static/scripts/start.js"></script>
     <link rel="stylesheet" href="/static/lib/bootstrap/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/static/lib/bootstrap/css/bootstrap-custom.min.css"/>
+    <link rel="stylesheet" href="/static/lib/font-awesome/css/font-awesome.min.css"/>
     {% block include %}{% endblock %}
 </head>
 <body>
