--- a/ironcat/templates/contribute.html
+++ b/ironcat/templates/contribute.html
@@ -8,11 +8,5 @@
 {% endblock %}
 
 {% block content %}
-    <!--
-    <div id="toolbox">
-        <input type="file" id="hidden-file-upload"><input id="upload-input" type="image" title="upload graph" src="upload-icon.png" alt="upload graph"/>
-        <input type="image" id="download-input" title="download graph" src="download-icon.png" alt="download graph"/>
-        <input type="image" id="delete-graph" title="delete graph" src="trash-icon.png" alt="delete graph"/>
-    </div>
-    -->
+    <button type="button" class="btn btn-primary"><i class="icon-save"></i></button>
 {% endblock %}
