--- a/ironcat/templates/contribute.html
+++ b/ironcat/templates/contribute.html
@@ -8,5 +8,5 @@
 {% endblock %}
 
 {% block content %}
-    <button type="button" class="btn btn-primary"><i class="icon-save"></i></button>
+    <button type="button" class="btn btn-primary save-btn"><i class="fa fa-floppy-o"></i></button>
 {% endblock %}
