added a name edit label/box

--- a/ironcat/templates/contribute.html
+++ b/ironcat/templates/contribute.html
@@ -8,5 +8,18 @@
 {% endblock %}
 
 {% block content %}
-    <button type="button" class="btn btn-primary save-btn"><i class="fa fa-floppy-o"></i></button>
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <div>
+                <ul class="nav navbar-nav">
+                    <li>
+                        <button type="button" class="btn btn-primary save-btn">
+                            <i class="fa fa-floppy-o"></i>
+                        </button>
+                    </li>
+                    <li><div class="function-name"></div></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 {% endblock %}
