--- a/ironcat/templates/contribute.html
+++ b/ironcat/templates/contribute.html
@@ -17,7 +17,7 @@
                             <i class="fa fa-floppy-o"></i>
                         </button>
                     </li>
-                    <li><div class="function-name"></div></li>
+                    <li><a class="function-name"></a></li>
                 </ul>
             </div>
         </div>
