--- a/ironcat/static/css/graph-creator.css
+++ b/ironcat/static/css/graph-creator.css
@@ -1,158 +1,162 @@
-body {
-    margin: 0;
-    padding: 0;
-    overflow:hidden;
-}
-
 p {
-     text-align: center;
-     /*overflow: overlay;*/
-     position: relative;
+  text-align: center;
+  position: relative;
 }
-
 body {
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    /*-khtml-user-select: none;*/
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    background-color: rgb(248, 248, 248)
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background-color: #f8f8f8;
 }
-
-#toolbox {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    margin-bottom: 0.5em;
-    margin-left: 1em;
-    border: 2px solid #EEEEEE;
-    border-radius: 5px;
-    padding: 1em;
-    z-index: 5;
-}
-
-#toolbox input {
-    width: 30px;
-    opacity: 0.4;
-}
-#toolbox input:hover {
-    opacity: 1;
-    cursor: pointer;
-}
-
-#hidden-file-upload {
-    display: none;
-}
-
-#download-input {
-    margin: 0 0.5em;
-}
-
 .conceptG text {
-    pointer-events: none;
+  pointer-events: none;
 }
-
 marker {
-    fill: #333;
+  fill: #333;
 }
-
 .node rect {
-    fill: #F6FBFF;
-    stroke: #333;
-    stroke-width: 2px;
+  fill: #F6FBFF;
+  stroke: #333;
+  stroke-width: 2px;
 }
-
 g.node:hover rect {
-    fill: rgb(200, 238, 241);
+  fill: #c8eef1;
 }
-
 g.selected rect {
-    fill: rgb(250, 232, 255);
+  fill: #fae8ff;
 }
 g.selected:hover rect {
-    fill: rgb(250, 232, 255);
+  fill: #fae8ff;
 }
-
-path.link {
-    fill: none;
-    stroke: #333;
-    stroke-width: 6px;
-    cursor: default;
+.link {
+  fill: none;
+  stroke: #ffff00;
+  stroke-width: 6px;
+  cursor: default;
+  transition: all 0.25s;
 }
-
-path.link:hover {
-    stroke: rgb(94, 196, 204);
+.link.hidden {
+  stroke-width: 0;
 }
-
-g.connect-node rect {
-    fill: #BEFFFF;
+.link.selected {
+  stroke: #fff;
 }
-
-path.link.hidden {
-    stroke-width: 0;
+.link:hover {
+  stroke: #5ec4cc;
 }
-
-path.link.selected {
-    stroke: rgb(229, 172, 247);
+.connect-node rect {
+  fill: #beffff;
 }
-
 a.function-name {
-    cursor: pointer;
+  cursor: pointer;
 }
-
 input.function-name {
-    margin-left: 12px;
-    margin-top: 10px;
-    margin-bottom: 6px;
+  margin-left: 12px;
+  margin-top: 10px;
+  margin-bottom: 6px;
 }
-
 .pin-delete {
-    cursor: pointer;
+  cursor: pointer;
 }
-
 .pin-delete circle {
-    fill: rgba(128, 128, 128, 128);
-    transition: all 0.25s;
+  fill: #ff0000;
+  transition: all 0.2s ease-in-out;
 }
-
-.pin-delete:hover circle {
-    fill: rgba(255, 0, 0, 255);
-}
-
 .pin-delete text {
-    fill: #ffffff;
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    font-size: 22px;
-    font-weight: bold;
-    user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    -webkit-user-select: none;
-    pointer-events: none;
+  fill: #ffffff;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 22px;
+  font-weight: bold;
+  user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -webkit-user-select: none;
+  pointer-events: none;
+  opacity: 1;
 }
-
 .pin-add {
-    cursor: pointer;
+  cursor: pointer;
 }
-
 .pin-add circle {
-    fill: rgba(128, 128, 128, 128);
-    transition: all 0.25s;
+  fill: #008000;
+  transition: all 0.2s ease-in-out;
 }
-
-.pin-add:hover circle {
-    fill: rgba(0, 128, 0, 255)
-}
-
 .pin-add text {
-    fill: #ffffff;
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    font-size: 22px;
-    font-weight: bold;
-    user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    -webkit-user-select: none;
-    pointer-events: none;
+  fill: #ffffff;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 22px;
+  font-weight: bold;
+  user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -webkit-user-select: none;
+  pointer-events: none;
+  opacity: 1;
+}
+.vanish circle {
+  fill: rgba(255, 255, 255, 0);
+}
+.vanish text {
+  opacity: 0;
+}
+.editor {
+  background-color: #333;
+}
+.input circle,
+.output circle {
+  stroke: white;
+  fill: #999;
+}
+.input.connected circle,
+.output.connected circle {
+  fill: #993;
+}
+.node-input circle,
+.node-output circle {
+  stroke: #666;
+  fill: #999;
+}
+.node-input.connected circle,
+.node-output.connected circle {
+  fill: #993;
+}
+.node-function-name {
+  user-select: none;
+  cursor: default;
+  font-weight: 900;
+  font-family: "Josefin Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  color: #fff;
+  fill: #fff;
+}
+.node-label path {
+  stroke: black;
+  fill: #666;
+}
+.node-delete {
+  cursor: pointer;
+}
+.node-delete circle {
+  stroke: none;
+  fill: #969696;
+  transition: all 0.25s;
+}
+.node-delete:hover circle {
+  fill: #ff0000;
+}
+.node-delete text {
+  fill: #666;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 22px;
+  font-weight: bold;
+  user-select: none;
+  transition: all 0.25s;
+}
+.node-delete:hover text {
+  fill: #fff;
 }
