added starter placeholder for results that show up when you start typing in a function name

--- a/ironcat/static/css/graph-creator.less
+++ b/ironcat/static/css/graph-creator.less
@@ -165,7 +165,6 @@ input.function-name {
       cursor: inherit;
       user-select: none;
       font-weight: 900;
-      font-family: 'Josefin Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
       font-size: 16px;
       color: #fff;
       fill: #fff;
@@ -179,6 +178,10 @@ input.function-name {
   }
 }
 
+text {
+  font-family: 'Josefin Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
+}
+
 .node {
   .node-delete {
     circle {
@@ -188,7 +191,6 @@ input.function-name {
     }
     text {
       fill: rgba(96, 96, 96, 0);
-      font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
       font-size: 22px;
       font-weight: bold;
       user-select: none;
@@ -212,6 +214,11 @@ input.function-name {
           fill: rgba(255, 255, 255, 255);
         }
       }
+    }
+  }
+  .node-results {
+    text {
+      fill: #ffffff;
     }
   }
 }
