--- a/ironcat/static/css/graph-creator.less
+++ b/ironcat/static/css/graph-creator.less
@@ -1,18 +1,18 @@
 p {
-     text-align: center;
-     position: relative;
+  text-align: center;
+  position: relative;
 }
 
 body {
-    margin: 0;
-    padding: 0;
-    overflow:hidden;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    background-color: rgb(248, 248, 248)
+  margin: 0;
+  padding: 0;
+  overflow:hidden;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background-color: rgb(248, 248, 248)
 }
 
 .conceptG text {
@@ -20,17 +20,17 @@ body {
 }
 
 marker {
-    fill: #333;
+  fill: #333;
 }
 
 .node rect {
-    fill: #F6FBFF;
-    stroke: #333;
-    stroke-width: 2px;
+  fill: #F6FBFF;
+  stroke: #333;
+  stroke-width: 2px;
 }
 
 g.node:hover rect {
-    fill: rgb(200, 238, 241);
+  fill: rgb(200, 238, 241);
 }
 g.selected {
   rect {
@@ -216,9 +216,46 @@ text {
       }
     }
   }
-  .node-results {
-    text {
-      fill: #ffffff;
+  .search-results {
+    .search-result {
+      &.selected {
+        rect {
+          fill: #606060;
+          stroke: #000000;
+        }
+        text {
+          fill: #ffff00;
+        }
+      }
+      rect {
+        fill: #000000;
+        stroke: #d0d0d0;
+        stroke-width: 1px;
+        transition: all 0.15s;
+      }
+      text {
+        fill: #ffffff;
+        transition: all 0.15s;
+      }
     }
   }
+}
+
+p:focus {
+  outline: none;
+}
+
+p::-moz-selection {
+  background: rgba(0, 0, 255, 0.99);
+  color: #00ff88;
+}
+
+p::-webkit-selection {
+  background: rgba(0, 0, 255, 0.99);
+  color: #00ff88;
+}
+
+p::selection {
+  background: rgba(0, 0, 255, 0.99);
+  color: #00ff88;
 }
