--- a/ironcat/templates/global.html
+++ b/ironcat/templates/global.html
@@ -7,6 +7,7 @@
     <script src="/static/lib/jquery.min.js"></script>
     <script src="/static/lib/jquery.cookie.js"></script>
     <script src="/static/lib/d3.min.js"></script>
+    <script src="/static/lib/jquery.debounce.min.js"></script>
     <script src="/static/scripts/start.js"></script>
     <link rel="stylesheet" href="/static/lib/bootstrap/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/static/lib/bootstrap/css/bootstrap-custom.min.css"/>
