--- a/ironcat/static/css/graph-creator.less
+++ b/ironcat/static/css/graph-creator.less
@@ -134,6 +134,7 @@ input.function-name {
   circle {
     stroke: white;
     fill: #999;
+    transition: fill 0.25s;
   }
   &.connected {
     circle {
@@ -146,6 +147,7 @@ input.function-name {
   circle {
     stroke: #666;
     fill: #999;
+    transition: fill 0.25s;
   }
   &.connected {
     circle {
