added a default value modal, looks like nothing now

--- a/ironcat/templates/global.html
+++ b/ironcat/templates/global.html
@@ -15,6 +15,7 @@
     {% block include %}{% endblock %}
 </head>
 <body>
+    {% include "value_modal.html" %}
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
