--- a/ironcat/static/css/graph-creator.less
+++ b/ironcat/static/css/graph-creator.less
@@ -1,3 +1,6 @@
+@connected-pin-fill: #007070;
+@stroke-primary:     #00ffff;
+
 p {
   text-align: center;
   position: relative;
@@ -45,7 +48,7 @@ g.selected {
 
 .link {
   fill: none;
-  stroke: #ffff00;
+  stroke: @stroke-primary;
   stroke-width: 6px;
   cursor: default;
   transition: all 0.25s;
@@ -56,7 +59,7 @@ g.selected {
     stroke: #fff;
   }
   &:hover {
-    stroke: rgb(94, 196, 204);
+    stroke: #fff;
   }
 }
 
@@ -126,47 +129,47 @@ input.function-name {
 }
 
 .editor {
-  background-color: #333;
+  background-color: #000;
   cursor: default;
 }
 
 .input, .output {
   circle {
-    stroke: white;
-    fill: #999;
+    stroke: @stroke-primary;
+    fill: #000;
     transition: fill 0.25s;
   }
   &.connected {
     circle {
-      fill: #993;
+      fill: @connected-pin-fill;
     }
   }
 }
 
 .node-input, .node-output {
   circle {
-    stroke: #666;
-    fill: #999;
+    stroke: @stroke-primary;
+    fill: #000;
     transition: fill 0.25s;
   }
   &.connected {
     circle {
-      fill: #993;
+      fill: @connected-pin-fill;
     }
   }
 }
 
 .node-header {
   path {
-    stroke: black;
-    fill: #666;
+    stroke: @stroke-primary;
+    stroke-width: 2;
+    fill: #000;
   }
   .node-label {
     cursor: pointer;
     .node-function-name {
       cursor: inherit;
       user-select: none;
-      font-weight: 900;
       font-size: 16px;
       color: #fff;
       fill: #fff;
@@ -181,10 +184,15 @@ input.function-name {
 }
 
 text {
-  font-family: 'Josefin Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
+  font-family: 'Menlo','Helvetica Neue',Helvetica,Arial,sans-serif;
 }
 
 .node {
+  .node-shape {
+    fill: #000;
+    stroke: @stroke-primary;
+    stroke-width: 2;
+  }
   .node-delete {
     circle {
       stroke: none;
