--- a/ironcat/templates/value_modal.html
+++ b/ironcat/templates/value_modal.html
@@ -1,10 +1,10 @@
 <div id="valueModal" class="modal fade">
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-        <h3 id="myModalLabel">Modal header</h3>
+        <h3 id="myModalLabel">Edit Value</h3>
     </div>
     <div class="modal-body">
-        <p>One fine body…</p>
+        <p></p>
     </div>
     <div class="modal-footer">
         <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
