put another font thing in sylesheet

--- a/ironcat/static/css/graph-creator.css
+++ b/ironcat/static/css/graph-creator.css
@@ -212,3 +212,6 @@ p::selection {
   background: #009090;
   color: #00ffff;
 }
+p {
+  font-family: 'Menlo', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
