--- a/ironcat/templates/contribute.html
+++ b/ironcat/templates/contribute.html
@@ -8,15 +8,10 @@
 {% endblock %}
 
 {% block content %}
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-default editor-toolbar">
         <div class="container-fluid">
             <div>
                 <ul class="nav navbar-nav">
-                    <li>
-                        <button type="button" class="btn btn-primary save-btn">
-                            <i class="fa fa-floppy-o"></i>
-                        </button>
-                    </li>
                     <li><a class="function-name"></a></li>
                 </ul>
             </div>
