changed bootstrap css

--- a/ironcat/static/css/graph-creator.css
+++ b/ironcat/static/css/graph-creator.css
@@ -7,6 +7,15 @@ body {
 a {
   transition: all 0.25s;
 }
+.modal-header,
+.modal-body,
+.modal-footer {
+  /*position: fixed;
+  left: calc(0.5 * (100% - @modal-width));
+  top: 0;
+  width: @modal-width;*/
+  z-index: 1040;
+}
 .container {
   margin: 0 !important;
   padding: 0 !important;
