--- a/ironcat/templates/contribute.html
+++ b/ironcat/templates/contribute.html
@@ -7,6 +7,10 @@
     <link href="/static/css/graph-creator.css" rel="stylesheet"/>
 {% endblock %}
 
+{% block requires %}
+    {% include "value_modal.html" %}
+{% endblock %}
+
 {% block content %}
     <nav class="navbar navbar-default editor-toolbar">
         <div class="container-fluid">
