--- a/ironcat/templates/global.html
+++ b/ironcat/templates/global.html
@@ -15,7 +15,6 @@
     {% block include %}{% endblock %}
 </head>
 <body>
-    {% include "value_modal.html" %}
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
@@ -31,6 +30,7 @@
             </div>
         </div>
     </nav>
+    {% block requires %}{% endblock %}
     <div class="container">
         {% block content %}
             <p>Content goes here.</p>
