--- a/ironcat/templates/value_modal.html
+++ b/ironcat/templates/value_modal.html
@@ -7,7 +7,6 @@
         <p></p>
     </div>
     <div class="modal-footer">
-        <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
-        <button class="btn btn-primary">Save changes</button>
+        <button class="btn btn-primary" data-dismiss="modal">Save</button>
     </div>
 </div>
