--- a/ironcat/templates/value_modal.html
+++ b/ironcat/templates/value_modal.html
@@ -1,7 +1,7 @@
 <div id="valueModal" class="modal fade">
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-        <h3 id="myModalLabel">Edit Value</h3>
+        <h3 id="myModalLabel">Input Value</h3>
     </div>
     <div class="modal-body">
         <p></p>
