added select dropdown to value modal

--- a/ironcat/templates/value_modal.html
+++ b/ironcat/templates/value_modal.html
@@ -4,7 +4,14 @@
         <h3 id="myModalLabel">Input Value</h3>
     </div>
     <div class="modal-body">
-        <p></p>
+        <select class="selectpicker">
+            <option>String</option>
+            <option>Rope</option>
+            <option>Twine</option>
+            <option>Cable</option>
+            <option>Straw</option>
+            <option>Spidey Silk</option>
+        </select>
     </div>
     <div class="modal-footer">
         <button class="btn btn-primary" data-dismiss="modal">Save</button>
