--- a/ironcat/templates/global.html
+++ b/ironcat/templates/global.html
@@ -6,11 +6,13 @@
     <script src="/static/lib/jquery.min.js"></script>
     <script src="/static/lib/jquery.cookie.js"></script>
     <script src="/static/lib/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/static/lib/bootstrap/js/bootstrap-select.min.js"></script>
     <script src="/static/lib/d3.min.js"></script>
     <script src="/static/lib/jquery.debounce.min.js"></script>
     <script src="/static/scripts/start.js"></script>
     <link rel="stylesheet" href="/static/lib/bootstrap/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/static/lib/bootstrap/css/bootstrap-custom.min.css"/>
+    <link rel="stylesheet" href="/static/lib/bootstrap/css/bootstrap-select.min.css" />
     <link rel="stylesheet" href="/static/lib/font-awesome/css/font-awesome.min.css"/>
     {% block include %}{% endblock %}
 </head>
