set the options for value type to be, er, what they need to be

--- a/ironcat/templates/value_modal.html
+++ b/ironcat/templates/value_modal.html
@@ -5,12 +5,15 @@
     </div>
     <div class="modal-body">
         <select class="selectpicker">
+            <option>None</option>
+            <option>Error</option>
             <option>String</option>
-            <option>Rope</option>
-            <option>Twine</option>
-            <option>Cable</option>
-            <option>Straw</option>
-            <option>Spidey Silk</option>
+            <option>Number</option>
+            <option>Boolean</option>
+            <option>Object</option>
+            <option>Set</option>
+            <option>List</option>
+            <option>Function</option>
         </select>
     </div>
     <div class="modal-footer">
