--- a/ironcat/templates/value_modal.html
+++ b/ironcat/templates/value_modal.html
@@ -4,17 +4,20 @@
         <h3 id="myModalLabel">Input Value</h3>
     </div>
     <div class="modal-body">
-        <select class="selectpicker">
-            <option>None</option>
-            <option>Error</option>
-            <option>String</option>
-            <option>Number</option>
-            <option>Boolean</option>
-            <option>Object</option>
-            <option>Set</option>
-            <option>List</option>
-            <option>Function</option>
-        </select>
+        <div class="input-group">
+            <select class="selectpicker" id="valueType">
+                <option>None</option>
+                <option>Error</option>
+                <option>String</option>
+                <option>Number</option>
+                <option>Boolean</option>
+                <option>Object</option>
+                <option>Set</option>
+                <option>List</option>
+                <option>Function</option>
+            </select>
+            <input type="text" class="form-control" placeholder="Value" aria-describedby="valueType"/>
+        </div>
     </div>
     <div class="modal-footer">
         <button class="btn btn-primary" data-dismiss="modal">Save</button>
